linear-algebra/kernels/bicg/woven_code/.compile.err
warning: OpenMP support for version 51 in flang is still incomplete
error: Semantic errors in /root/polybench-metafor/linear-algebra/kernels/bicg/woven_code/bicg.preproc.f90
/root/polybench-metafor/linear-algebra/kernels/bicg/woven_code/bicg.preproc.f90:87:20: error: The SIZES clause has more entries than there are nested canonical loops.
          !$omp tile sizes(32,32)
                     ^^^^^^^^^^^^
/root/polybench-metafor/linear-algebra/kernels/bicg/woven_code/bicg.preproc.f90:91:20: error: The SIZES clause has more entries than there are nested canonical loops.
          !$omp tile sizes(32,32)
                     ^^^^^^^^^^^^
